added navbar and icons

--- a/index.html
+++ b/index.html
@@ -14,9 +14,76 @@
     ></script>
   </head>
   <body>
-    <nav class="logo-container">
-      <h4 class="logo">Metz</h4>
+    <nav class="navbar-container">
+      <div class="nav-left-container">
+        <p class="left arrow-left">--</p>
+        <p class="left arrow-label">All templates</p>
+        <p class="left comp-icon icon">
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            width="48"
+            height="48"
+            viewBox="0 0 48 48"
+          >
+            <path fill="none" d="M0 0h48v48h-48z" />
+            <path
+              fill="#fa2356"
+              d="M40 36v-2c2.21 0 3.98-1.79 3.98-4l.02-20c0-2.21-1.79-4-4-4h-32c-2.21 0-4 1.79-4 4v20c0 2.21 1.79 4 4 4v2h-8v4h48v-4h-8zm-32-26h32v20h-32v-20z"
+            />
+          </svg>
+        </p>
+        <p class="left tablet-icon icon">
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            width="48"
+            height="48"
+            viewBox="0 0 48 48"
+          >
+            <path
+              fill="#9da3a9"
+              d="M36 0h-24c-3.31 0-6 2.69-6 6v36c0 3.31 2.69 6 6 6h24c3.31 0 6-2.69 6-6v-36c0-3.31-2.69-6-6-6zm-8 44h-8v-2h8v2zm10.5-6h-29v-32h29v32z"
+            />
+          </svg>
+        </p>
+        <p class="left phone-icon icon">
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            width="48"
+            height="48"
+            viewBox="0 0 48 48"
+          >
+            <path
+              fill="#9da3a9"
+              d="M32 2h-16c-3.31 0-6 2.69-6 6v32c0 3.31 2.69 6 6 6h16c3.31 0 6-2.69 6-6v-32c0-3.31-2.69-6-6-6zm-4 40h-8v-2h8v2zm6.5-6h-21v-28h21v28z"
+            />
+            <path fill="none" d="M0 0h48v48h-48z" />
+          </svg>
+        </p>
+      </div>
+      <div class="nav-right-container">
+        <p class="right check-mark">
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            class="top-right-icon"
+            viewBox="0 0 24 24"
+          >
+            <g data-name="Layer 2">
+              <g data-name="checkmark-circle-2">
+                <rect width="18" height="18" opacity="0" />
+                <path
+                  d="M12 2a10 10 0 1 0 10 10A10 10 0 0 0 12 2zm4.3 7.61l-4.57 6a1 1 0 0 1-.79.39 1 1 0 0 1-.79-.38l-2.44-3.11a1 1 0 0 1 1.58-1.23l1.63 2.08 3.78-5a1 1 0 1 1 1.6 1.22z"
+                />
+              </g>
+            </g>
+          </svg>
+        </p>
+        <p class="right no-credit-card">No credit card required</p>
+        <button class="right building">Start Building</button>
+      </div>
     </nav>
+    <header class="logo-container">
+      <h4 class="logo">Metz</h4>
+    </header>
     <div class="hero-container">
       <div class="hero hero-left">
         <h1 class="main-hero-text">The future of design is here</h1>
