added left arrow and button hover effect

--- a/index.html
+++ b/index.html
@@ -16,7 +16,21 @@
   <body>
     <nav class="navbar-container">
       <div class="nav-left-container">
-        <p class="left arrow-left">--</p>
+        <p class="left arrow-left">
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            data-name="Layer 1"
+            viewBox="0 0 64 64"
+          >
+            <path
+              fill="none"
+              stroke="#020202"
+              stroke-miterlimit="10"
+              stroke-width="4"
+              d="M19 48L3 32c5.32-5.35 10.65-10.67 16-16M64 32H3"
+            />
+          </svg>
+        </p>
         <p class="left arrow-label">All templates</p>
         <p class="left comp-icon icon">
           <svg
